[gd_scene load_steps=3 format=3 uid="uid://3v6hcpcd8wo5"]

[ext_resource type="Script" path="res://heist_server.gd" id="1_y1si4"]
[ext_resource type="Script" path="res://websocket_server.gd" id="2_ni18e"]

[node name="HeistServer" type="Node2D"]
script = ExtResource("1_y1si4")

[node name="WebSocketServer" type="Node" parent="."]
script = ExtResource("2_ni18e")

[node name="Panel" type="Panel" parent="."]
offset_right = 367.0
offset_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 153.0

[node name="_log_dest" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 174.0
offset_bottom = 55.0
text = "SPAM"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
